Train and Save best model

--- a/model/notebooks/train_basic.ipynb
+++ b/model/notebooks/train_basic.ipynb
@@ -61,7 +61,7 @@
    "id": "4b985f0f",
    "metadata": {},
    "source": [
-    "## Tran XGBoost Model"
+    "## Train XGBoost Model"
    ]
   },
   {
