--- a/dev/notebooks/train_with_mlflow.ipynb
+++ b/dev/notebooks/train_with_mlflow.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "id": "00b944ed",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "id": "d3ef98f0",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "id": "697df5f9",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "id": "cc167944",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "id": "e868fdab",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "id": "b581b223",
    "metadata": {},
    "outputs": [
@@ -99,16 +99,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/07/04 17:50:49 INFO mlflow.tracking.fluent: Experiment with name 'xgboost-breast-cancer' does not exist. Creating a new experiment.\n"
+      "2025/07/04 18:39:22 INFO mlflow.tracking.fluent: Experiment with name 'xgboost-breast-cancer' does not exist. Creating a new experiment.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='file:f:\\\\GitHub\\\\xgboost-mlops-pipeline\\\\model\\\\notebooks\\\\..\\\\mlruns/815168156842703501', creation_time=1751665849318, experiment_id='815168156842703501', last_update_time=1751665849318, lifecycle_stage='active', name='xgboost-breast-cancer', tags={}>"
+       "<Experiment: artifact_location='file:f:\\\\GitHub\\\\XGBoost-MLOps-Pipeline\\\\dev\\\\notebooks\\\\..\\\\mlruns/180398845674641005', creation_time=1751668762463, experiment_id='180398845674641005', last_update_time=1751668762463, lifecycle_stage='active', name='xgboost-breast-cancer', tags={}>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 9,
    "id": "c460b538",
    "metadata": {},
    "outputs": [
@@ -128,10 +128,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/07/04 18:00:29 WARNING mlflow.models.model: `artifact_path` is deprecated. Please use `name` instead.\n",
-      "f:\\GitHub\\xgboost-mlops-pipeline\\model\\venv\\Lib\\site-packages\\xgboost\\sklearn.py:1028: UserWarning: [18:00:29] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\c_api\\c_api.cc:1427: Saving model in the UBJSON format as default.  You can use file extension: `json`, `ubj` or `deprecated` to choose between formats.\n",
+      "2025/07/04 18:39:43 WARNING mlflow.models.model: `artifact_path` is deprecated. Please use `name` instead.\n",
+      "d:\\Anaconda\\Lib\\site-packages\\xgboost\\sklearn.py:1028: UserWarning: [18:39:44] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\c_api\\c_api.cc:1427: Saving model in the UBJSON format as default.  You can use file extension: `json`, `ubj` or `deprecated` to choose between formats.\n",
       "  self.get_booster().save_model(fname)\n",
-      "2025/07/04 18:00:33 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+      "2025/07/04 18:39:46 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
      ]
     },
     {
@@ -147,9 +147,9 @@
     "\n",
     "    # Define model and hyperparameters\n",
     "    params = {\n",
-    "        \"n_estimators\": 100,\n",
+    "        \"n_estimators\": 150,\n",
     "        \"learning_rate\": 0.1,\n",
-    "        \"max_depth\": 3,\n",
+    "        \"max_depth\": 6,\n",
     "        \"eval_metric\": \"logloss\",\n",
     "        \"random_state\": 717\n",
     "    }\n",
@@ -189,7 +189,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
